--- a/owl_content.css
+++ b/owl_content.css
@@ -68,7 +68,7 @@ body {
     min-height: 600px;
     margin-bottom: 70px;
     border: 1px solid #d8d8d8;
-    background: url(../img/read_content.png) !important;
+    background: url(https://gitee.com/howie6879/oss/raw/master/uPic/hMVuOw.jpg) !important;
 }
 
 .title {
